Correct Align and Link Test

--- a/CSS/start.css
+++ b/CSS/start.css
@@ -2,7 +2,7 @@ body
 {
 	background: #252525;
 	font-family: 'Raleway', sans-serif;
-	color: blue;
+	color: white;
 	
 }
 h1
